--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="micro tunneling, underground utilities, trenchless technology, infrastructure contractor, India">
     <meta name="author" content="DHANVI TUNNELING PROFESSIONAL CO.">
     <title>DHANVI TUNNELING PROFESSIONAL CO. | Micro Tunneling & Trenchless Solutions</title>
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="apple-touch-icon" href="logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,13 +25,16 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <img src="logo.png" alt="DHANVI TUNNELING PROFESSIONAL CO." class="logo-img">
+                    <a href="#home" onclick="window.location.reload(); return false;" style="text-decoration: none; display: inline-block;">
+                        <img src="logo.png" alt="DHANVI TUNNELING PROFESSIONAL CO." class="logo-img">
+                    </a>
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#services" class="nav-link">Services</a></li>
                     <li><a href="#video" class="nav-link">Video</a></li>
+                    <li><a href="#social-media" class="nav-link">Latest Updates</a></li>
                     <li><a href="#gallery" class="nav-link">Gallery</a></li>
                     <li><a href="#why-choose-us" class="nav-link">Why Choose Us</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -71,8 +76,13 @@
             <div class="about-content">
                 <div class="about-text">
                     <h3>Your Trusted Partner in Underground Infrastructure</h3>
-                    <p>DHANVI TUNNELING PROFESSIONAL CO. is a specialized infrastructure contractor with extensive experience in micro tunneling and underground utility works. We excel in executing complex projects across diverse geological conditions, from soft soil to challenging hard rock formations.</p>
-                    <p>Our engineering-driven approach combines advanced tunneling machinery with technical expertise to deliver precision solutions. We prioritize safety, accuracy, and on-time project execution, ensuring minimal surface disruption while maintaining the highest standards of quality.</p>
+                    <p>DHANVI TUNNELING PROFESSIONAL CO. specializes in advanced trenchless and microtunneling solutions for underground pipeline installation. We deliver accurate, efficient, and low-impact construction services using modern equipment and proven engineering practices. Our expertise ensures reliable execution of projects in urban, industrial, and infrastructure environments with minimal surface disruption.</p>
+                    <ul>
+                        <li><b>Microtunneling & Pipe Jacking</b> – Precise underground pipeline installation with minimal surface disturbance.</li>
+                        <li><b>Horizontal Directional Drilling (HDD)</b> – Trenchless crossings beneath roads, rivers, and utilities.</li>
+                        <li><b>Underground Sewer & Utility Pipelines</b> – Installation of water, sewer, and utility networks.</li>
+                        <li><b>End-to-End Project Execution</b> – Planning, execution, and technical support for trenchless projects.</li>
+                    </ul>
                     <div class="about-highlights">
                         <div class="highlight-item">
                             <div class="highlight-icon">⚙️</div>
@@ -97,7 +107,8 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=800&h=600&fit=crop" alt="Micro tunneling operations" class="about-img">
+                    <img src="/img/about.jpg?w=800&h=600&fit=crop" alt="Micro tunneling operations" class="about-img">
+                    <img src="/img/about-2.jpg?w=800&h=600&fit=crop" alt="Micro tunneling operations" class="about-img about-img-second">
                 </div>
             </div>
         </div>
@@ -114,7 +125,7 @@
                 <div class="video-container">
                     <iframe 
                         class="youtube-video"
-                        src="https://www.youtube.com/embed/rv001lgzLGw?enablejsapi=1&origin=https://www.youtube.com" 
+                        src="https://www.youtube.com/embed/kuHga-iGKKg" 
                         title="DHANVI TUNNELING PROFESSIONAL CO. - Micro Tunneling Operations"
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -122,12 +133,7 @@
                         id="youtube-player">
                     </iframe>
                 </div>
-                <div class="video-fallback" style="display: none; text-align: center; padding: 2rem; background: var(--bg-light); border-radius: 12px; margin-top: 1rem;">
-                    <p style="margin-bottom: 1rem;">Unable to load video player.</p>
-                    <a href="https://www.youtube.com/watch?v=rv001lgzLGw" target="_blank" rel="noopener" class="btn btn-primary">Watch on YouTube</a>
-                </div>
             </div>
-            <p class="video-note">📹 <a href="https://www.youtube.com/watch?v=rv001lgzLGw" target="_blank" rel="noopener" style="color: var(--brand-orange); text-decoration: underline;">Watch on YouTube</a> if the embed doesn't work. Make sure embedding is enabled in your video settings.</p>
         </div>
     </section>
 
@@ -140,19 +146,19 @@
             </div>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-icon">🚂</div>
+                    <!--<div class="service-icon">🚂</div>-->
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=600&h=400&fit=crop" alt="Crossing of Railway" class="service-img">
+                        <img src="/img/service-railway.png?w=600&h=400&fit=crop" alt="Crossing of Railway" class="service-img">
                     </div>
                     <div class="service-content">
                         <h3>Crossing of Railway</h3>
                         <p>Expert railway crossing solutions using advanced tunneling techniques. Safe and efficient underground passages that ensure minimal disruption to rail operations.</p>
                     </div>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">🛣️</div>
+                <div class="service-card">  
+                    <!--<div class="service-icon">🛣️</div>-->
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=600&h=400&fit=crop" alt="Highway and Canal crossing" class="service-img">
+                        <img src="/img/service-highway.png?w=600&h=400&fit=crop" alt="Highway and Canal crossing" class="service-img">
                     </div>
                     <div class="service-content">
                         <h3>Highway & Canal By Manual Pushing</h3>
@@ -160,9 +166,9 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🔧</div>
+                    <!--<div class="service-icon">🔧</div>-->
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?w=600&h=400&fit=crop" alt="Pipe Jacking" class="service-img">
+                        <img src="/img/service-pipe-jacking.png?w=600&h=400&fit=crop" alt="Pipe Jacking" class="service-img">
                     </div>
                     <div class="service-content">
                         <h3>Pipe Jacking</h3>
@@ -170,15 +176,31 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🚇</div>
+                    <!--<div class="service-icon">🚇</div>-->
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1625246333195-78d9c38ad449?w=600&h=400&fit=crop" alt="Microtunneling" class="service-img">
+                        <img src="/img/service-microtunneling.png?w=600&h=400&fit=crop" alt="Microtunneling" class="service-img">
                     </div>
                     <div class="service-content">
                         <h3>Microtunneling Various Diameter</h3>
                         <p>Comprehensive microtunneling solutions for various pipe diameters. State-of-the-art equipment ensures precision in all underground installation projects.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Social Media Posts Section -->
+    <section id="social-media" class="social-media">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Latest Updates</h2>
+                <p class="section-subtitle">Follow us on Social Media</p>
+            </div>
+            <div class="social-posts-grid">
+                <div class="social-post-item">
+                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7407099759536140288?collapsed=1" height="856" width="504" frameborder="0" allowfullscreen="" title="Embedded post" class="social-embed"></iframe>
+                </div>
+                <!-- Add more social media posts here -->
             </div>
         </div>
     </section>
@@ -192,22 +214,64 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=600&h=500&fit=crop" alt="Micro tunneling operation in mixed soil" class="gallery-img">
+                    <img src="./img/gallery-1.jpg" alt="Micro tunneling operation in mixed soil" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=600&h=500&fit=crop" alt="Crane lifting micro tunneling machine" class="gallery-img">
+                    <img src="./img/gallery-2.jpg" alt="Crane lifting micro tunneling machine" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?w=600&h=500&fit=crop" alt="Hard rock underground utility installation" class="gallery-img">
+                    <img src="./img/gallery-3.jpg" alt="Hard rock underground utility installation" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1625246333195-78d9c38ad449?w=600&h=500&fit=crop" alt="Underground pipe installation system" class="gallery-img">
+                    <img src="./img/gallery-4.jpg" alt="Underground pipe installation system" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=600&h=500&fit=crop" alt="On-site engineering work" class="gallery-img">
+                    <img src="./img/gallery-5.jpg" alt="On-site engineering work" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=600&h=500&fit=crop" alt="Micro tunneling machine operation" class="gallery-img">
+                    <img src="./img/team.jpg" alt="Micro tunneling machine operation" class="gallery-img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Events Section -->
+    <section id="events" class="events">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Events & Exhibitions</h2>
+                <p class="section-subtitle">Our Participation in Industry Events</p>
+            </div>
+            <div class="events-grid">
+                <div class="event-card">
+                    <div class="event-image">
+                        <img src="images/event-nodig-1.jpg" alt="No Dig Show Event" class="event-img">
+                    </div>
+                    <div class="event-content">
+                        <h3>No Dig Show 2024</h3>
+                        <p class="event-date">March 15-17, 2024</p>
+                        <p class="event-description">DHANVI TUNNELING PROFESSIONAL CO. participated in the prestigious No Dig Show, showcasing our latest micro tunneling technologies and solutions.</p>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <div class="event-image">
+                        <img src="images/event-nodig-2.jpg" alt="No Dig Show Exhibition" class="event-img">
+                    </div>
+                    <div class="event-content">
+                        <h3>No Dig Show Exhibition</h3>
+                        <p class="event-date">March 15-17, 2024</p>
+                        <p class="event-description">Our team demonstrated advanced tunneling equipment and shared expertise with industry professionals from around the world.</p>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <div class="event-image">
+                        <img src="images/event-nodig-3.jpg" alt="No Dig Show Networking" class="event-img">
+                    </div>
+                    <div class="event-content">
+                        <h3>Industry Networking</h3>
+                        <p class="event-date">March 15-17, 2024</p>
+                        <p class="event-description">Connecting with global tunneling experts and exploring new opportunities in underground infrastructure development.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -382,6 +446,7 @@
                         <li><a href="#services">Services</a></li>
                         <li><a href="#video">Video</a></li>
                         <li><a href="#gallery">Gallery</a></li>
+                        <li><a href="#events">Events</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
