--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="/img/about.jpg?w=800&h=600&fit=crop" alt="Micro tunneling operations" class="about-img">
-                    <img src="/img/about-2.jpg?w=800&h=600&fit=crop" alt="Micro tunneling operations" class="about-img about-img-second">
+                    <img src="img/about.jpg" alt="Micro tunneling operations" class="about-img">
+                    <img src="img/about-2.jpg" alt="Micro tunneling operations" class="about-img about-img-second">
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
                 <div class="service-card">
                     <!--<div class="service-icon">🚂</div>-->
                     <div class="service-image">
-                        <img src="/img/service-railway.png?w=600&h=400&fit=crop" alt="Crossing of Railway" class="service-img">
+                        <img src="img/service-railway.png" alt="Crossing of Railway" class="service-img">
                     </div>
                     <div class="service-content">
                         <h3>Crossing of Railway</h3>
@@ -158,7 +158,7 @@
                 <div class="service-card">  
                     <!--<div class="service-icon">🛣️</div>-->
                     <div class="service-image">
-                        <img src="/img/service-highway.png?w=600&h=400&fit=crop" alt="Highway and Canal crossing" class="service-img">
+                        <img src="img/service-highway.png" alt="Highway and Canal crossing" class="service-img">
                     </div>
                     <div class="service-content">
                         <h3>Highway & Canal By Manual Pushing</h3>
@@ -168,7 +168,7 @@
                 <div class="service-card">
                     <!--<div class="service-icon">🔧</div>-->
                     <div class="service-image">
-                        <img src="/img/service-pipe-jacking.png?w=600&h=400&fit=crop" alt="Pipe Jacking" class="service-img">
+                        <img src="img/service-pipe-jacking.png" alt="Pipe Jacking" class="service-img">
                     </div>
                     <div class="service-content">
                         <h3>Pipe Jacking</h3>
@@ -178,7 +178,7 @@
                 <div class="service-card">
                     <!--<div class="service-icon">🚇</div>-->
                     <div class="service-image">
-                        <img src="/img/service-microtunneling.png?w=600&h=400&fit=crop" alt="Microtunneling" class="service-img">
+                        <img src="img/service-microtunneling.png" alt="Microtunneling" class="service-img">
                     </div>
                     <div class="service-content">
                         <h3>Microtunneling Various Diameter</h3>
@@ -214,22 +214,22 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="./img/gallery-1.jpg" alt="Micro tunneling operation in mixed soil" class="gallery-img">
+                    <img src="img/gallery-1.jpg" alt="Micro tunneling operation in mixed soil" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="./img/gallery-2.jpg" alt="Crane lifting micro tunneling machine" class="gallery-img">
+                    <img src="img/gallery-2.jpg" alt="Crane lifting micro tunneling machine" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="./img/gallery-3.jpg" alt="Hard rock underground utility installation" class="gallery-img">
+                    <img src="img/gallery-3.jpg" alt="Hard rock underground utility installation" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="./img/gallery-4.jpg" alt="Underground pipe installation system" class="gallery-img">
+                    <img src="img/gallery-4.jpg" alt="Underground pipe installation system" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="./img/gallery-5.jpg" alt="On-site engineering work" class="gallery-img">
+                    <img src="img/gallery-5.jpg" alt="On-site engineering work" class="gallery-img">
                 </div>
                 <div class="gallery-item">
-                    <img src="./img/team.jpg" alt="Micro tunneling machine operation" class="gallery-img">
+                    <img src="img/team.jpg" alt="Micro tunneling machine operation" class="gallery-img">
                 </div>
             </div>
         </div>
@@ -245,7 +245,7 @@
             <div class="events-grid">
                 <div class="event-card">
                     <div class="event-image">
-                        <img src="images/event-nodig-1.jpg" alt="No Dig Show Event" class="event-img">
+                        <img src="img/event-nodig-1.jpg" alt="No Dig Show Event" class="event-img">
                     </div>
                     <div class="event-content">
                         <h3>No Dig Show 2024</h3>
@@ -255,7 +255,7 @@
                 </div>
                 <div class="event-card">
                     <div class="event-image">
-                        <img src="images/event-nodig-2.jpg" alt="No Dig Show Exhibition" class="event-img">
+                        <img src="img/event-nodig-2.jpg" alt="No Dig Show Exhibition" class="event-img">
                     </div>
                     <div class="event-content">
                         <h3>No Dig Show Exhibition</h3>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="event-card">
                     <div class="event-image">
-                        <img src="images/event-nodig-3.jpg" alt="No Dig Show Networking" class="event-img">
+                        <img src="img/event-nodig-3.jpg" alt="No Dig Show Networking" class="event-img">
                     </div>
                     <div class="event-content">
                         <h3>Industry Networking</h3>
