--- a/index.html
+++ b/index.html
@@ -125,11 +125,12 @@
                 <div class="video-container">
                     <iframe 
                         class="youtube-video"
-                        src="https://www.youtube.com/embed/kuHga-iGKKg" 
+                        src="https://www.youtube-nocookie.com/embed/kuHga-iGKKg?rel=0&modestbranding=1&playsinline=1" 
                         title="DHANVI TUNNELING PROFESSIONAL CO. - Micro Tunneling Operations"
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                         allowfullscreen
+                        loading="lazy"
                         id="youtube-player">
                     </iframe>
                 </div>
